--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 psycopg2 = "^2.8"
 django-toolbelt = "^0.0.1"
 djangorestframework = "^3.10"
+django-rest-framework = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
