--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -52,8 +52,10 @@ http {
     location /static/ {
         alias /code/static/;
     }
-   # location ~ ^/(static|media)/(.*)$ {
-   #   alias /$1/$2;
-   # }
+    
+	# backend media
+	location /media/ {
+        alias /code/media/;
+    }
   }
 }
