--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -38,10 +38,14 @@ http {
     }
 
     # backend static
-    location ~ ^/(static|media)/(.*)$ {
-      alias /$1/$2;
+    location /static/ {
+        alias /code/static/;
     }
 
+    # backend media
+    location /media/ {
+        alias /code/media/;
+    }
     # Some basic cache-control for static files to be sent to the browser
     location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
       expires max;
