--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,11 +3,10 @@ FROM node:10-alpine as build-deps
 
 WORKDIR /code/
 
-COPY frontend/package.json frontend/package-lock.json /code/
+COPY frontend/babel.config.js frontend/package.json frontend/vue.config.js frontend/yarn.lock /code/
 RUN yarn install
 
 COPY frontend /code/
-COPY .env /code/.env
 RUN yarn build
 
 # Stage 2 - nginx & frontend dist
