--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -17,8 +17,8 @@ http {
     listen 80;
     charset utf-8;
 
-    root /dist/;
-    index index.html;
+    root /;
+    index /dist/index.html;
 
     # frontend
     location / {
