--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,6 +1,7 @@
 # pull official base image
 FROM python:3.7.4-alpine
 
+RUN mkdir /code
 WORKDIR /code
 
 ARG MY_ENV
@@ -24,9 +25,6 @@ RUN apk update \
 RUN pip install --upgrade pip
 RUN pip install "poetry==$POETRY_VERSION"
 
-# copy entrypoint.sh
-COPY ./entrypoint.prod.sh /code/entrypoint.prod.sh
-
 # Copy only requirements to cache them in docker layer
 COPY poetry.lock pyproject.toml /code/
 
@@ -35,7 +33,8 @@ RUN poetry config settings.virtualenvs.create false \
 	&& poetry install --no-interaction --no-ansi
 
 # Creating folders, and files for a project:
-COPY . /code
+COPY ./entrypoint.sh /code/entrypoint.sh
+COPY ./static/ /code/static/
 
 # run entrypoint.sh
 ENTRYPOINT ["/code/entrypoint.prod.sh"]
