Only problem now is api static files are not loading

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -17,8 +17,8 @@ http {
     listen 80;
     charset utf-8;
 
-    root /code/;
-    index /dist/index.html;
+    root /dist;
+    index /index.html;
 
     # frontend
     location / {
