I THINK I GOT MY API STATIC TO LOAD:

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -18,7 +18,11 @@ http {
     charset utf-8;
 
     root /dist;
-    index /index.html;
+    index index.html;
+
+	location ~ ^/(static|media)/ {
+      root /code;
+    }
 
     # frontend
     location / {
@@ -38,14 +42,17 @@ http {
     }
 
     # backend static
-    location /static/ {
-        alias /code/static/;
-    }
+    #location /static/ {
+    #    root /code;
+    #}
 
     # backend media
-    location /media/ {
-        alias /code/media/;
-    }
+    #location /media/ {
+    #    root /code;
+    #}
+
+
+
     # Some basic cache-control for static files to be sent to the browser
     location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
       expires max;
