--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,7 @@ services:
     command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     restart: on-failure
     environment:
-      - DEBUG=1
+      - DEBUG=0
       - SECRET_KEY="y&x(u-n@sz#z-n_)!%hz+p7+px%i6m3g%%(t1^7h*o=yfvem(i"
       - SQL_ENGINE=django.db.backends.postgresql
       - SQL_USER=template_user_prod
@@ -25,11 +25,13 @@ services:
   db:
     image: postgres
     volumes:
-      - postgres_data:/var/lib/postgres/data/
+      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=template_user_prod
       - POSTGRES_DB=template_db_prod
       - POSTGRES_PASSWORD=123456abc
+    ports:
+      - 5432:5432
 
   nginx:
     build:
