--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ psycopg2 = "^2.8"
 django-toolbelt = "^0.0.1"
 djangorestframework = "^3.10"
 django-rest-framework = "^0.1.0"
+django-cors-headers = "^3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
