--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.0",
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
